--- a/docs/interni/analisi_delle_tecnologie/analisi_delle_tecnologie.tex
+++ b/docs/interni/analisi_delle_tecnologie/analisi_delle_tecnologie.tex
@@ -134,6 +134,18 @@ di estrema perdita di valore dei token e conseguentemente di fiducia nella rete 
 
 \end{itemize}
 
+\newpage
+
+\subsection*{Tabella comparativa delle Blockchain}
+La seguente tabella è stata sviluppata per confrontare alcune delle blockchain più famose e ritenute valide secondo le metriche precedentemente definite.
+Esistendo centinaia di blockchain diverse questa tabella non è chiaramente comprensiva di tutte: è stato necessario adottare dei criteri di esclusione pre-valutazione per confrontare
+solo le blockchain più adatte.
+Un primo criterio di esclusione riguarda ovviamente la possibilità di pubblicazione di contratti digitali: mentre non è escluso che esistano altre blockchain competitive
+per le normali transazioni, l'assenza della capacità di eseguire contratti digitali ne ha decretato l'esclusione dalla tabella comparativa.
+Un altro criterio di esclusione più opinabile, invece, riguarda il tempo di vita della chain stessa: sono state escluse blockchain con rilascio risalente a meno di un anno fa,
+perchè ritenuto che almeno un anno di vita senza problemi di stabilità nelle reti sia necessario per garantire almeno una parte della sicurezza delle stesse, soprattutto
+considerando che andremo ad operare con fondi di utenti che andrebbero risarciti in caso di problemi.
+
 \renewcommand\arraystretch{1.6}
 
 %Tabella scalabilità
@@ -175,7 +187,14 @@ Cardano                                     & L1                                
 \end{tabular}
 \end{center}
 
-\subsection*{Ethereum}
+\bigskip
+\noindent
+Seguirà una descrizione discorsiva di ogni rete analizzata, con eventuali puntualizzazioni circa i dati presenti in tabella.\\
+Per ogni rete a fondo pagina saranno presenti le fonti dalla quale sono stati reperiti i dati in tabella e altre informazioni sul funzionamento
+specifico della rete.
+
+\newpage
+\subsection*{Ethereum\footnote{Sources: Ethereum.org, miningpoolstats.stream/ethereum, Etherscan.io}}
 Ethereum è una rete peer-to-peer per la creazione e la pubblicazione di smart contracts rilasciata nel 2015 e da allora leader tra le piattaforme decentralizzate
 per contratti digitali.
 Ethereum rappresenta uno standard \textit{de-facto} nel mondo degli smart contracts: il suo linguaggio di programmazione nativo Solidity è
@@ -202,6 +221,7 @@ Ethereum eccelle in sicurezza e in decentralizzazione: il suo algoritmo di conse
 Il costo per attaccare la rete grazie al grande numero di nodi sarebbe incredibilmente alto, e i nodi sono geograficamente distribuiti in modo accettabile.
 Per questi motivi riteniamo sia la rete più sicura tra quelle analizzate.
 
+\newpage
 \subsubsection*{Considerazioni finali}
 Ethereum è un'ottima rete che ha scelto di sacrificare la scalabilità in favore di una piattaforma realmente decentralizzata e altamente sicura; è in continua evoluzione
 e ha una community di sviluppatori tra le più grandi. Tuttavia, per questo progetto non è possibile accettare dei compromessi del genere: i costi e la velocità delle transazioni
@@ -211,8 +231,7 @@ lo sharding (sotto-chain divise e comunicanti tra loro) per migliorarne la scala
 della rete aggiornata sia importante per valutare se fosse auspicabile migrare il contratto del progetto in esame verso Ethereum per godere della sua sicurezza intrinseca.
 
 \newpage
-
-\subsection*{Polygon}
+\subsection*{Polygon\footnote{Sources: polygonscan.com, polygon.technology, wallet.polygon.technology/staking/validators}}
 Polygon è una sidechain di Ethereum rilasciata ufficialmente nel 2020 che mira a risolvere i problemi di scalabilità di Ethereum rinunciando a parte della sua sicurezza.
 Seppure Polygon sia una blockchain separata da Ethereum con un suo proprio meccanismo di validazione dei blocchi, Polygon sfrutta parte della sicurezza di Ethereum salvando il suo stato attuale a checkpoint su di essa.
 
@@ -229,12 +248,11 @@ in caso di gravi problemi sulla rete di Polygon anche dovuti alla sua poca decen
 \subsubsection*{Considerazioni finali}
 Nonostante la velocità e i costi di Polygon siano ottimi per il progetto in esame, il basso numero di validatori da solo non può garantire la sicurezza di cui necessitiamo.
 In condizioni in cui generalmente una blockchain con queste caratteristiche non potrebbe essere scelta per questo tipo di progetto, il meccanismo di checkpoint su Ethereum cambia radicalmente la situazione: seppure non viene garantita la stessa sicurezza intrinseca di Ethereum, Polygon diventa così sufficientemente sicuro per essere utilizzato in questo progetto.
-Inoltre, il sistema di delegazione dei validatori ci assicura che impossessarsi della rete sia estremamente difficile, perchè richiederebbe sia di ottenere un numero rilevante di validatori (1/3 di quelli totali nelle reti PoS) sia che tali validatori rientrino tutti nella lista dei 100 eletti, dunque abbiano ottime performance e siano scelti da altri delegatori,
+Inoltre, il sistema di delegazione dei validatori ci assicura che impossessarsi della rete sia estremamente difficile, perchè richiederebbe sia di ottenere un numero rilevante di validatori ($\frac{1}{3}$ di quelli totali nelle reti PoS) sia che tali validatori rientrino tutti nella lista dei 100 eletti, dunque abbiano ottime performance e siano scelti da altri delegatori,
 senza contare che un attacco alla rete distruggerebbe il valore dei token nello stake dell'entità attaccante e dei delegatori, incentivando ulteriormente quest'ultimi a scegliere validatori onesti a cui delegare il proprio stake.
 
 \newpage
-
-\subsection*{xDai}
+\subsection*{xDai\footnote{Sources: xdaichain.com, xdaichain.com/about-xdai}}
 La sidechain di xDai, nata nel 2018, si basa su transazioni a valore stabile grazie al token nativo xDai che è legato al valore del dollaro statounitense.
 Questa caratteristica è particolarmente interessante per questo progetto perchè aiuterebbe con il problema del cambio di valore dei token nel tempo.
 
@@ -252,7 +270,8 @@ L'unica cosa che mantiene la blockchain sicura attualmente è che i validatori s
 \subsubsection*{Considerazioni finali}
 Con una tale centralizzazione, xDai non può essere considerata una blockchain sufficientemente sicura per sviluppare e pubblicare il contratto facente parte delle direttive di questo progetto. Rimane però una sidechain interessante, che (anche se non confermato) con l'implementazione dello sharding su Ethereum potrebbe diventare uno degli shard e dunque beneficiare della sua sicurezza e decentralizzazione, facilitando le applicazioni decentralizzate (dApp) che sfruttano i pagamenti in valuta stabile.
 
-\subsection*{Solana}
+\newpage
+\subsection*{Solana\footnote{Sources: solana.com, explorer.solana.com, solanabeach.io/supply}}
 La blockchain di Solana è nata nel 2018. Lo scopo per cui è stata creata era quello di offrire lo stesso servizio offerto dalla blockchain di Ethereum, ma garantendo maggior velocità e minori costi di transazione. La principale innovazione introdotta in questo sistema è la PoH (Proof of History), utilizzata per risolvere i problemi legati alla veridicità del timestamp in un network P2P.
 \subsubsection*{Scalabilità}
 Solana è ottimale per effettuare transazioni ed eseguire smart contract a costi molto bassi e in un breve periodo di tempo. La grandezza del blocco è ottimale ed inoltre è in grado di eseguire un elevatissimo numero di transazioni e operazioni al secondo.
@@ -260,9 +279,12 @@ Solana è ottimale per effettuare transazioni ed eseguire smart contract a costi
 Solana utilizza un algoritmo di consenso di tipo PoS, più precisamente si tratta di una sorta di DPoS (Delegated PoS) dove, per ciascun blocco da aggiungere, tutti i nodi della rete eleggono un insieme di nodi detti "delegati" con incarico di raccogliere le transazioni e minare il blocco. Ogni nodo ha un potere nella votazione che è ponderato secondo la sua partecipazione fino a quel momento nella rete. Per poter sincronizzare ed evitare disaccordi sull'ordine delle transazioni, è stato introdotto il PoH precedentemente accennato: non si tratta di un protocollo di consenso, bensì di un sistema in grado di gestire perfettamente in ordine cronologico ogni transazione e dunque di evitare confusione tra i vari nodi e le varie transazioni. Per quanto riguarda la decentralizzazione sono presenti circa 1300 nodi nel network, non è assolutamente paragonabile al numero di nodi di Ethereum, ma si può ritenere un buon compromesso considerando l'ottima scalabilità.
 \subsubsection*{Considerazioni finali}
 Solana è tra le migliori blockchain in circolazione e rispecchia quasi tutti i requisiti fondamentali per la realizzazione del progetto. Tuttavia oltre alla disomogenea distribuzione del token nativo tra i vari wallet, l'elemento che ha decretato l'esclusione dalle possibili scelte è stato il crollo della blockchain avvenuto il 14 settembre, durante il quale il network di Solana è rimasto offline per circa 16 ore in seguito ad un attacco denial-of-service. Nonostante Solana sia successivamente ritornata in funzione perfettamente, riteniamo grave l'accaduto soprattutto perchè il prodotto che deve essere realizzato non permette assolutamente di rimanere offline per periodi di tempo così lunghi.
-\subsection*{Algorand}
-\subsection*{Avalanche}
-\subsection*{Fantom}
+\newpage
+\subsection*{Algorand\footnote{Sources: algoexplorer.io, metrics.algorand.org}}
+\newpage
+\subsection*{Avalanche\footnote{Sources: explorer.avax.network/validators, avascan.info, avascan.info/stats/richlist}}
+\newpage
+\subsection*{Fantom\footnote{Sources: docs.fantom.foundation, ftmscan.com/chart/blocktime, ftmscan.com/chart/blocksize}}
 La blockchain Fantom, uscita nel 2018 in testnet e successivamente rilasciata definitivamente nel Dicembre 2019, è un Layer-1 nato per fornire un'alternativa ad Ethereum.
 La Fantom Foundation si è focalizzata nella realizzazione di una blockchain con ottimi attributi di scalabilità, tralasciando tuttavia parzialmente l'aspetto della decentralizzazione.
 \subsubsection*{Scalabilità}
@@ -271,12 +293,15 @@ La scalabilità è il punto forte di Fantom, infatti con un numero elevatissimo 
 L' algoritmo di consenso utilizzato si chiama Lachesis, si tratta di un PoS con BTF (Byzantine Fault Tolerance) secondo il quale la blockchain rimane stabile e in funzione fin tanto che i $\frac{2}{3}$ dei validatori non è malevolo.
 Da un lato questo algoritmo potrebbe facilitare un'ipotetico attacco alla blockchain, tuttavia essendo complesso e oneroso diventare validatore risulta alla fine complesso e controproducente attaccare la blockchain.
 Per poter diventare validatore sono necessari 1 milione di FTM (token nativo di Fantom), circa l’equivalente di 2 milioni di dollari.
-Pecca sotto l’aspetto della decentralizzazione poiché sono presenti solo 60 validatori momentaneamente, di cui 10 appartenenti alla Fantom Foundation.
+Pecca sotto l’aspetto della decentralizzazione poiché sono presenti solo 60 validatori momentaneamente (anche per le enormi risorse economiche richieste per diventare validatore) , di cui 10 appartenenti alla Fantom Foundation.
 \subsubsection*{Considerazioni finali}
 Nonostante sia una delle migliori blockchain sotto il punto di vista della scalabilità, non è stata scelta poiché riteniamo, al fine di garantire una lunga prospettiva di vita al progetto, che sia fondamentale utilizzare una blockchain maggiormente decentralizzata, dunque con un numero maggiore di validatori.
-\subsection*{Cardano}
 
-\subsection*{Harmony}
+\newpage
+\subsection*{Cardano\footnote{Sources: adastat.net, explorer.cardano.org, ada.tokenview.com/en/topaccount}}
+
+\newpage
+\subsection*{Harmony\footnote{Sources: harmony.one/Ecosystem, explorer.harmony.one, staking.harmony.one/validators/mainnet}}
 La blockchain di Harmony è stata fondata nel 2018 e condivisa nel 2019. Il fondatore Stephen Tse, un ingegnere specializzato in protocolli crittografici, ha cercato di fornire una valida alternativa più scalabile alla blockchain di Ethereum cercando di risolvere il trilemma attraverso l'introduzione innovativa degli shard.
 \subsubsection*{Scalabilità}
 Indubbiamente Harmony è tra le blockchain più scalabili in assoluto, infatti esegue un numero elevatissimo di TPS ad un costo quasi nullo. L'unica pecca sta nell'elevata grandezza dei blocchi che potrebbe causare ritardi nei tempi di trasmissione tra validatori nel network. Questi ottimi attributi di scalabilità sono permessi dalla suddivisione della blockchain in 4 shard, i quali rendono possibile la suddivisione del carico computazionale richiesto ai validatori così da poter eseguire in parallelo e dunque più velocemente uno smart contract.
@@ -287,6 +312,8 @@ Vengono inoltre continuamente monitorati i validatori per individuare e penalizz
 Per diventare validatore al momento sono necessari 10.000 ONE più uno specifico hardware. Al prezzo attuale di mercato si tratta di circa 2000/3000\$.
 \subsubsection*{Considerazioni finali}
 Nonostante dal punto di vista della scalabilità si tratta di una ottima blockchain per la realizzazione del progetto, è stata esclusa poiché, come per Fantom, la decentralizzazione non è ottimale e buona parte dei validatori di Harmony viene controllata dal team. In più la distribuzione del token nativo tra i vari wallet è esageratamente disomogenea, infatti i primi 100 wallet più ricchi possiedono circa il 40\% della supply circolante.
+
+\newpage
 \subsection*{Conclusioni}
 \begin{itemize}
 
