--- a/docs/interni/analisi_delle_tecnologie/analisi_delle_tecnologie.tex
+++ b/docs/interni/analisi_delle_tecnologie/analisi_delle_tecnologie.tex
@@ -274,7 +274,7 @@ Con una tale centralizzazione, xDai non può essere considerata una blockchain s
 \subsection*{Solana\footnote{Sources: solana.com, explorer.solana.com, solanabeach.io/supply}}
 La blockchain di Solana è nata nel 2018. Lo scopo per cui è stata creata era quello di offrire lo stesso servizio offerto dalla blockchain di Ethereum, ma garantendo maggior velocità e minori costi di transazione. La principale innovazione introdotta in questo sistema è la PoH (Proof of History), utilizzata per risolvere i problemi legati alla veridicità del timestamp in un network P2P.
 \subsubsection*{Scalabilità}
-Solana è ottimale per effettuare transazioni ed eseguire smart contract a costi molto bassi e in un breve periodo di tempo. La grandezza del blocco è ottimale ed inoltre è in grado di eseguire un elevatissimo numero di transazioni e operazioni al secondo.
+Solana è ottimale per effettuare transazioni ed eseguire smart contract a costi molto bassi e in un breve periodo di tempo. La grandezza del blocco è ideale ed inoltre è in grado di eseguire un elevatissimo numero di transazioni e operazioni al secondo.
 \subsubsection*{Sicurezza \& Decentralizzazione}
 Solana utilizza un algoritmo di consenso di tipo PoS, più precisamente si tratta di una sorta di DPoS (Delegated PoS) dove, per ciascun blocco da aggiungere, tutti i nodi della rete eleggono un insieme di nodi detti "delegati" con incarico di raccogliere le transazioni e minare il blocco. Ogni nodo ha un potere nella votazione che è ponderato secondo la sua partecipazione fino a quel momento nella rete. Per poter sincronizzare ed evitare disaccordi sull'ordine delle transazioni, è stato introdotto il PoH precedentemente accennato: non si tratta di un protocollo di consenso, bensì di un sistema in grado di gestire perfettamente in ordine cronologico ogni transazione e dunque di evitare confusione tra i vari nodi e le varie transazioni. Per quanto riguarda la decentralizzazione sono presenti circa 1300 nodi nel network, non è assolutamente paragonabile al numero di nodi di Ethereum, ma si può ritenere un buon compromesso considerando l'ottima scalabilità.
 \subsubsection*{Considerazioni finali}
@@ -299,6 +299,15 @@ Nonostante sia una delle migliori blockchain sotto il punto di vista della scala
 
 \newpage
 \subsection*{Cardano\footnote{Sources: adastat.net, explorer.cardano.org, ada.tokenview.com/en/topaccount}}
+La blockchain di Cardano è stata fondata nel 2015 e lanciata nel 2017 dal co-founder di Ethereum. Si tratta di una delle blockchain in circolazione più affermate e vanta una vasta e solida community. Cardano è un Layer-1 per la gestione ed esecuzione di smart contract, tuttavia quest'ultimi sono stati resi disponibile solo a Settembre 2021 con l'hard fork Alonzo.
+\subsubsection*{Scalabilità}
+Per quanto riguarda la scalabilità, Cardano ha dei discreti costi e velocità nelle transazioni. Se paragonata alle blockchain più recenti risulta meno performante, ma rimane comunque un passo più avanti rispetto alla scalabilità di Ethereum. Permette di effettuare transazioni per circa 50 centesimi in più o meno 20 secondi, inoltre i blocchi di grandezza ottimale vengono minati ogni 4 secondi. Per evitare congestione nella blockchain, quest'ultima è stata divisa in due strati per differenziare due diversi tipi di operazoni: CSL (Cardano Settlement Layer) ovvero lo strato per tutte le transazioni tra i vari wallet e CCL (Cardano Computational Layer) che riguarda Smart Contract e lo spostamento di fondi in maniera programmatica.
+\subsubsection*{Sicurezza \& Decentralizzazione}
+Cardano utilizza un algoritmo di consenso chiamato Ouroborus, si tratta di un PoS. Questo algoritmo si basa sul concetto di honest majority secondo il quale il nodo o l'insieme di nodi di maggioranza, dunque che possiede la maggiorparte dei token nativi, sia un nodo onesto poiché non è nei suoi interessi far crollare il valore della valuta. In Ouroborus il tempo viene suddiviso in epoche (intervalli temporali) e slot (incrementi di 20 secondi in un'epoca), ogni slot viene estratto un blocco e scelto il leader dello slot.
+Per quanto riguarda la decentralizzazione, il network di Cardano è composto da circa 3mila nodi validatori, un buon numero che permettere di poter considerare questa blockchain sufficientemente decentralizzata.
+\subsubsection*{Considerazioni finali}
+Cardano viene chiamata blockchain di "terza generazione" perchè ha permesso parzialmente di risolvere il famoso trilemma delle blockchain portando innovazione e aumentando consistentemente la scalabilità  , il tutto riuscendo a mantenere un buon livello di decentralizzazione, anche se non paragonabile a quello di Ethereum. Tuttavia questa blockchain è stata esclusa dalle scelte poichè, nonostante rispetto ad altre blockchain esista già da diversi anni, non ha reso disponibile lo sviluppo di smart contract se non solo recentemente e per lo sviluppo di questo progetto è stato ritenuto rischioso approciarsi ad un Layer-1 troppo giovane sotto l'aspetto degli smart contract.
+
 
 \newpage
 \subsection*{Harmony\footnote{Sources: harmony.one/Ecosystem, explorer.harmony.one, staking.harmony.one/validators/mainnet}}
