--- a/docs/interni/analisi_delle_tecnologie/analisi_delle_tecnologie.tex
+++ b/docs/interni/analisi_delle_tecnologie/analisi_delle_tecnologie.tex
@@ -283,6 +283,15 @@ Solana è tra le migliori blockchain in circolazione e rispecchia quasi tutti i 
 \subsection*{Algorand\footnote{Sources: algoexplorer.io, metrics.algorand.org}}
 \newpage
 \subsection*{Avalanche\footnote{Sources: explorer.avax.network/validators, avascan.info, avascan.info/stats/richlist}}
+Avalanche è il primo network blockchain ad utilizzare l'omonimo protocollo di consenso ideato nel 2018. L'uscita di Avalanche è avvenuta nel 2020 ed ha riscosso subito grosso seguito, infatti questa blockchain risulta attualmente tra le più utilizzate oltre a poter  già vantare un' ampia e solida community.
+\subsubsection*{Scalabilità}
+Si tratta di una blockchain altamente scalabile: infatti è in grado di eseguire migliaia di transazioni al secondo a costi discreti, effettivamente se paragonata ad altri Layer-1 attualmente in circolazione, il costo di una transazione che si aggira intorno ai 30 centesimi può risultare lievemente più caro. La grandezza dei blocchi si aggira intorno al MB e potenzialmente può risultare un problema in periodi di forte congestione della blockchain. L'ottima scalabilità del network è permessa anche dalla suddivisione della blockchain in 3 sotto chain identificate dalle lettere X, C e P:  rispettivamente la prima utilizzata per la gestione dei vari asset, la seconda per la creazione e gestione di smart contract e infine la terza per il coordinamento tra i vari validatori.
+\subsubsection*{Sicurezza \& Decentralizzazione}
+L'algoritmo di consenso Avalanche utilizzato è un PoS con delegazione, alla base di questo algoritmo c'è il continuo confronto tra i vari validatori per la validazione dei blocchi, inoltre viene utilizzato nel network un contatore di confidenza per accordare velocemente tutti i nodi e poter dunque concordare sull'esito e aggiungere il blocco.
+Si tratta di un network discretamente decentralizzato, infatti vanta di circa poco più di un migliaio di validatori. Non è facile diventare validatori poiché, nonostante non sia necessario un hardware eccessivamente espansivo, bisogna possedere circa duemila AVAX (token nativo della chain) che al prezzo attuale di mercato equivale circa a 200k\$. Infine non ci sono problemi per quanto riguarda la distribuzione tra i vari wallet del token nativo perché risulta sufficientemente equilibrata.
+\subsubsection*{Considerazioni finali}
+Avalanche grazie al suo algoritmo di consenso, il quale è una variazione del classico PoS, permette di usufruire di una buona scalabilità a fronte di una discreta decentralizzazione. Si tratta di un network molto giovane, che ha riscosso parecchio successo proprio per essere riuscito a proporre soluzioni innovative e fino ad ora funzionanti, ma soprattutto che non andassero a sbilanciare troppo uno dei 3 aspetti cardine (scalabilità, sicurezza, decentralizzaione) di una blockchain trovando un buon compromesso tra di essi.
+Tuttavia la scelta non è ricaduta su questa blockchain poiché è stata preferita un'altra tecnologia più affermata.
 \newpage
 \subsection*{Fantom\footnote{Sources: docs.fantom.foundation, ftmscan.com/chart/blocktime, ftmscan.com/chart/blocksize}}
 La blockchain Fantom, uscita nel 2018 in testnet e successivamente rilasciata definitivamente nel Dicembre 2019, è un Layer-1 nato per fornire un'alternativa ad Ethereum.
