--- a/docs/interni/analisi_delle_tecnologie/analisi_delle_tecnologie.tex
+++ b/docs/interni/analisi_delle_tecnologie/analisi_delle_tecnologie.tex
@@ -179,7 +179,7 @@ Cardano                                     & L1                                
 Polygon                                     & Sidechain                                        & POS                               & \cellcolor[HTML]{FF8F8C}100               & \cellcolor[HTML]{ADE694}$\sim$7.5\% of Supply   \\
 \cellcolor[HTML]{EFEFEF}xDai                & \cellcolor[HTML]{EFEFEF}Sidechain                & POS                               & \cellcolor[HTML]{FF8F8C}24                & \cellcolor[HTML]{ADE694}$\sim$14\% of Supply    \\
 Solana                                      & L1                                              & POS                               & \cellcolor[HTML]{FFDD99}1 272             & \cellcolor[HTML]{FF8F8C}$\sim$30\% of Supply    \\
-\cellcolor[HTML]{EFEFEF}Algorand            & \cellcolor[HTML]{EFEFEF}L1                      & POS                               & \cellcolor[HTML]{FF8F8C}380               & \cellcolor[HTML]{FFDD99}$\sim$26\% of Supply    \\
+\cellcolor[HTML]{EFEFEF}Algorand            & \cellcolor[HTML]{EFEFEF}L1                      & POS                               & \cellcolor[HTML]{FFDD99}1000               & \cellcolor[HTML]{FFDD99}$\sim$26\% of Supply    \\
 Avalanche                                   & L1                                              & POS                               & \cellcolor[HTML]{FFDD99}1 180             & \cellcolor[HTML]{ADE694}$\sim$9.3\% of Supply   \\
 \cellcolor[HTML]{EFEFEF}Fantom              & \cellcolor[HTML]{EFEFEF}L1                      & POS                               & \cellcolor[HTML]{FF8F8C}60                & \cellcolor[HTML]{FFDD99}$\sim$23\% of Supply    \\
 Cardano                                     & L1                                              & POS                               & \cellcolor[HTML]{FFDD99}2 965             & \cellcolor[HTML]{ADE694}$\sim$9.94\% of Supply  \\
@@ -281,17 +281,26 @@ Solana utilizza un algoritmo di consenso di tipo PoS, più precisamente si tratt
 Solana è tra le migliori blockchain in circolazione e rispecchia quasi tutti i requisiti fondamentali per la realizzazione del progetto. Tuttavia oltre alla disomogenea distribuzione del token nativo tra i vari wallet, l'elemento che ha decretato l'esclusione dalle possibili scelte è stato il crollo della blockchain avvenuto il 14 settembre, durante il quale il network di Solana è rimasto offline per circa 16 ore in seguito ad un attacco denial-of-service. Nonostante Solana sia successivamente ritornata in funzione perfettamente, riteniamo grave l'accaduto soprattutto perchè il prodotto che deve essere realizzato non permette assolutamente di rimanere offline per periodi di tempo così lunghi.
 \newpage
 \subsection*{Algorand\footnote{Sources: algoexplorer.io, metrics.algorand.org}}
+Algorand è stata fondata dal professore italiano Silvio Micali nel 2017. Inizialmente si poteva programmare sono in TEAL, un linguaggio complicato e limitante, ma più sicuro; al giorno d'oggi si sta ampliando è importando altri linguaggi oltre ad essere compatibile con EVM.
+\subsubsection*{Scalabilità}
+Si tratta di una blockchain altamente scalabile, infatti è in grado di elaborare circa un migliaio di operazioni al secondo a costi inferiori al centesimo di dollaro. Per poter mantenere queste performance Algorand utilizza un'architettura a due layer nativi: L1 e L2, rispettivamente il primo dedicato a tutte quelle operazioni di base che risultano dunque meno onerose, mentre il secondo è dedicato a tutte quelle operazioni più elaborate, onerose ed a quelle elaborate off-chain che hanno bisogno di una conferma on-chain. La grandezza del blocco intorno al MB risulta un po' eccessiva e potrebbe causare di problemi in periodi di forte congestione della chain.
+\subsubsection*{Sicurezza \& Decentralizzazione}
+Algorand utilizza un algoritmo di consenso che è una variante del classico PoS, infatti si tratta di un Pure PoS. A differenza del PoS normale qualsiasi detentore della valuta nativa ALGO è potenzialmente eleggibile per la validazione di un blocco, la scelta del validatore è randomica ponderata a seconda del numero di valuta in possesso. Questa scelta randomica rende sicura la chain poiché un potenziale utente malevolo non potrà sapere in maniera deterministica chi sarà il prossimo validatore del blocco.
+Dal punto di vista della decentralizzazione si tratta di un network altamente decentralizzato proprio perchè i validatori sono i possessori di 1000 token determinati ogni volta che deve essere aggiunto un blocco alla chain, ma siccome la probabilità di essere eletti validatori è direttamente proporzionale al numero di token ALGO detenuti, la distribuzione del token risulta disomogenea, anche se non in maniera esagerata.
+\subsubsection*{Considerazioni finali}
+Algorand è un'ottima blockchain poiché riesce a combinare eccellenti attributi di scalabilità con una buona decentralizzazione. Le principali polemiche ricevute da Algorand riguardano la Tokenomics: infatti la gestione del token ALGO è molto particolare, infatti la supply totale deve ancora essere raggiunta e viene eseguita una politica di immissione di nuovi token qualora il suo valore dovesse salire velocemente (accellerated vesting), questa politica potrebbe disincentivare nuovi investitori poiché l'aumento del prezzo viene placato dall'immissione di nuova valuta.
+
 \newpage
 \subsection*{Avalanche\footnote{Sources: explorer.avax.network/validators, avascan.info, avascan.info/stats/richlist}}
 Avalanche è il primo network blockchain ad utilizzare l'omonimo protocollo di consenso ideato nel 2018. L'uscita di Avalanche è avvenuta nel 2020 ed ha riscosso subito grosso seguito, infatti questa blockchain risulta attualmente tra le più utilizzate oltre a poter  già vantare un' ampia e solida community.
 \subsubsection*{Scalabilità}
 Si tratta di una blockchain altamente scalabile: infatti è in grado di eseguire migliaia di transazioni al secondo a costi discreti, effettivamente se paragonata ad altri Layer-1 attualmente in circolazione, il costo di una transazione che si aggira intorno ai 30 centesimi può risultare lievemente più caro. La grandezza dei blocchi si aggira intorno al MB e potenzialmente può risultare un problema in periodi di forte congestione della blockchain. L'ottima scalabilità del network è permessa anche dalla suddivisione della blockchain in 3 sotto chain identificate dalle lettere X, C e P:  rispettivamente la prima utilizzata per la gestione dei vari asset, la seconda per la creazione e gestione di smart contract e infine la terza per il coordinamento tra i vari validatori.
+
 \subsubsection*{Sicurezza \& Decentralizzazione}
 L'algoritmo di consenso Avalanche utilizzato è un PoS con delegazione, alla base di questo algoritmo c'è il continuo confronto tra i vari validatori per la validazione dei blocchi, inoltre viene utilizzato nel network un contatore di confidenza per accordare velocemente tutti i nodi e poter dunque concordare sull'esito e aggiungere il blocco.
 Si tratta di un network discretamente decentralizzato, infatti vanta di circa poco più di un migliaio di validatori. Non è facile diventare validatori poiché, nonostante non sia necessario un hardware eccessivamente espansivo, bisogna possedere circa duemila AVAX (token nativo della chain) che al prezzo attuale di mercato equivale circa a 200k\$. Infine non ci sono problemi per quanto riguarda la distribuzione tra i vari wallet del token nativo perché risulta sufficientemente equilibrata.
 \subsubsection*{Considerazioni finali}
-Avalanche grazie al suo algoritmo di consenso, il quale è una variazione del classico PoS, permette di usufruire di una buona scalabilità a fronte di una discreta decentralizzazione. Si tratta di un network molto giovane, che ha riscosso parecchio successo proprio per essere riuscito a proporre soluzioni innovative e fino ad ora funzionanti, ma soprattutto che non andassero a sbilanciare troppo uno dei 3 aspetti cardine (scalabilità, sicurezza, decentralizzaione) di una blockchain trovando un buon compromesso tra di essi.
-Tuttavia la scelta non è ricaduta su questa blockchain poiché è stata preferita un'altra tecnologia più affermata.
+Avalanche grazie al suo algoritmo di consenso, il quale è una variazione del classico PoS, permette di usufruire di una buona scalabilità a fronte di una discreta decentralizzazione. Si tratta di un network molto giovane, che ha riscosso parecchio successo proprio per essere riuscito a proporre soluzioni innovative e fino ad ora funzionanti, ma soprattutto che non andassero a sbilanciare troppo uno dei 3 aspetti cardine (scalabilità, sicurezza, decentralizzaione) di una blockchain trovando un buon compromesso tra di essi. 
 \newpage
 \subsection*{Fantom\footnote{Sources: docs.fantom.foundation, ftmscan.com/chart/blocktime, ftmscan.com/chart/blocksize}}
 La blockchain Fantom, uscita nel 2018 in testnet e successivamente rilasciata definitivamente nel Dicembre 2019, è un Layer-1 nato per fornire un'alternativa ad Ethereum.
