Stesura norme su stesura verbali

--- a/docs/interni/norme_di_progetto/norme_di_progetto.tex
+++ b/docs/interni/norme_di_progetto/norme_di_progetto.tex
@@ -17,6 +17,7 @@ Questo documento contiene le procedure, gli strumenti e i criteri di qualità ch
 \addversione{0.0.0}{13/11/2021}{Elia Scandaletti}{Redazione}{Stesura \ref{documentazione}}
 \addversione{0.0.1}{14/11/2021}{Elia Scandaletti}{Redazione}{Stesura \ref{configurazione-github}}
 \addversione{0.0.2}{07/12/2021}{Elia Scandaletti}{Redazione}{Inserimento norme da verbale del 01/12/2021}
+\addversione{0.0.3}{22/12/2021}{Elia Scandaletti}{Redazione}{Stesura \ref{documentazione-documenti-verbali-stesura}}
 
 \begin{document}
 
@@ -179,6 +180,12 @@ Ogni verbale deve riportare:
 \item riassunto dei contenuti;
 \item eventuali impegni assunti.
 \end{itemize}
+\subparagraph{Stesura}\label{documentazione-documenti-verbali-stesura}
+All'inizio di ogni riunione verrà nominato un partecipante che redigerà il verbale e uno che lo approverà.
+
+Chi redige il verbale ha 24 ore per completare il lavoro. Chi approva il verbale ha 24 ore per approvarlo o segnalare eventuali correzioni da apportare.
+
+Nel secondo caso, il redattore avrà ulteriori 24 ore per adeguarsi alle indicazioni.
 
 \subsection{Configurazione}
 
